# swaypplet

./: Cargo.toml  build.rs  flake.nix
data/: style.css
docs/superpowers/specs/: 2026-03-27-network-section-enhancements-design.md
proto/: elephant.proto
src/: app.rs  elephant.rs  icons.rs  launcher.rs  layer_shell.rs  main.rs  osd.rs  panel.rs  spawn.rs  theme.rs
src/notifications/: dbus.rs  markup.rs  mod.rs  popup.rs  store.rs
src/polkit/: agent.rs  dialog.rs  helper.rs  mod.rs  session.rs
src/widgets/: audio.rs  bluetooth.rs  brightness.rs  clipboard.rs  display.rs  header.rs  media.rs  mod.rs  network.rs  notifications.rs  power.rs  screenshot.rs
src/widgets/network/: backend.rs  interfaces.rs  mod.rs  monitor.rs  vpn.rs  wifi.rs
